--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -42,13 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\n",
+      "s\n",
+      "sentence\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code here"
+    "#Code here\n",
+    "for w in st.split():\n",
+    "    if w[0] == 's':\n",
+    "        print(w)"
    ]
   },
   {
@@ -61,13 +74,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code Here"
+    "#Code Here\n",
+    "for n in range(0, 10):\n",
+    "    if n % 2 == 0:\n",
+    "        print(n)"
    ]
   },
   {
@@ -80,14 +108,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code in this cell\n",
-    "[]"
+    "[n for n in range(1, 50) if n % 3 == 0]"
    ]
   },
   {
@@ -100,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -111,13 +148,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even!\n",
+      "even!\n",
+      "even!\n",
+      "even!\n",
+      "even!\n",
+      "even!\n",
+      "even!\n",
+      "even!\n",
+      "even!\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "for w in st.split():\n",
+    "    if len(w) % 2 == 0:\n",
+    "        print('even!')"
    ]
   },
   {
@@ -130,13 +186,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "FizzBuzz\n",
+      "4\n",
+      "Buzz\n",
+      "FizzBuzz\n",
+      "7\n",
+      "8\n",
+      "FizzBuzz\n",
+      "Buzz\n",
+      "11\n",
+      "FizzBuzz\n",
+      "13\n",
+      "14\n",
+      "FizzBuzz\n",
+      "16\n",
+      "17\n",
+      "FizzBuzz\n",
+      "19\n",
+      "Buzz\n",
+      "FizzBuzz\n",
+      "22\n",
+      "23\n",
+      "FizzBuzz\n",
+      "Buzz\n",
+      "26\n",
+      "FizzBuzz\n",
+      "28\n",
+      "29\n",
+      "FizzBuzz\n",
+      "31\n",
+      "32\n",
+      "FizzBuzz\n",
+      "34\n",
+      "Buzz\n",
+      "FizzBuzz\n",
+      "37\n",
+      "38\n",
+      "FizzBuzz\n",
+      "Buzz\n",
+      "41\n",
+      "FizzBuzz\n",
+      "43\n",
+      "44\n",
+      "FizzBuzz\n",
+      "46\n",
+      "47\n",
+      "FizzBuzz\n",
+      "49\n",
+      "Buzz\n",
+      "FizzBuzz\n",
+      "52\n",
+      "53\n",
+      "FizzBuzz\n",
+      "Buzz\n",
+      "56\n",
+      "FizzBuzz\n",
+      "58\n",
+      "59\n",
+      "FizzBuzz\n",
+      "61\n",
+      "62\n",
+      "FizzBuzz\n",
+      "64\n",
+      "Buzz\n",
+      "FizzBuzz\n",
+      "67\n",
+      "68\n",
+      "FizzBuzz\n",
+      "Buzz\n",
+      "71\n",
+      "FizzBuzz\n",
+      "73\n",
+      "74\n",
+      "FizzBuzz\n",
+      "76\n",
+      "77\n",
+      "FizzBuzz\n",
+      "79\n",
+      "Buzz\n",
+      "FizzBuzz\n",
+      "82\n",
+      "83\n",
+      "FizzBuzz\n",
+      "Buzz\n",
+      "86\n",
+      "FizzBuzz\n",
+      "88\n",
+      "89\n",
+      "FizzBuzz\n",
+      "91\n",
+      "92\n",
+      "FizzBuzz\n",
+      "94\n",
+      "Buzz\n",
+      "FizzBuzz\n",
+      "97\n",
+      "98\n",
+      "FizzBuzz\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "for n in range(1, 100):\n",
+    "    if n % 3 == 0 & n % 5 == 0:\n",
+    "        print(\"FizzBuzz\")\n",
+    "    elif n % 3 == 0:\n",
+    "        print(\"Fizz\")\n",
+    "    elif n % 5 == 0:\n",
+    "        print(\"Buzz\")\n",
+    "    else:\n",
+    "        print(n)"
    ]
   },
   {
@@ -149,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -160,21 +331,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "[w[0] for w in st.split()]"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Great Job!"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
