--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    pass"
+    "    return 4/3*3.14*rad**3"
    ]
   },
   {
@@ -42,9 +42,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "33.49333333333333"
-      ]
+      "text/plain": "33.49333333333333"
      },
      "execution_count": 2,
      "metadata": {},
@@ -73,7 +71,10 @@
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    if low <= num <= high:\n",
+    "        print(f'{num} is in the range between {low} and {high}')\n",
+    "    else:\n",
+    "        print(f'{num} is not in the range between {low} and {high}')"
    ]
   },
   {
@@ -110,7 +111,7 @@
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    return low <= num <= high"
    ]
   },
   {
@@ -120,9 +121,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
      "execution_count": 6,
      "metadata": {},
@@ -152,28 +151,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    up = 0\n",
+    "    low = 0\n",
+    "\n",
+    "    for c in s:\n",
+    "        if c.isupper():\n",
+    "            up += 1\n",
+    "        elif c.islower():\n",
+    "            low += 1\n",
+    "\n",
+    "    print(f'Original String: {s}\\nNo. of Upper case characters : {up}\\nNo. of Lower case Characters : {low}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+      "Original String: Hello Mr. Rogers, how are you this fine Tuesday?\n",
+      "No. of Upper case characters : 4\n",
+      "No. of Lower case Characters : 33\n"
      ]
     }
    ],
@@ -195,28 +203,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    return list(set(lst))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5]"
-      ]
+      "text/plain": "[1, 2, 3, 4, 5]"
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,28 +244,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def multiply(numbers):  \n",
-    "    pass"
+    "    total = numbers[0]\n",
+    "    for n in numbers[1:]:\n",
+    "        total = total * n\n",
+    "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "-24"
-      ]
+      "text/plain": "-24"
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,28 +287,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    return s == s[::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -340,21 +345,27 @@
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    print(f'sorted: {sorted(set(filter(lambda c:c not in string.whitespace, map(lambda c:c.lower(), str1))))}')\n",
+    "    return \"\".join(sorted(set(filter(lambda c:c not in string.whitespace, map(lambda c:c.lower(), str1))))) == alphabet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorted: ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
